--- a/RankCheck/app/src/main/res/layout/games_list.xml
+++ b/RankCheck/app/src/main/res/layout/games_list.xml
@@ -2,17 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="150dp">
+    android:padding="10dp"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/gameImage"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="100dp"
         android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent=".35" />
+        app:layout_constraintWidth_percent=".35"
+        android:contentDescription="image"
+        app:srcCompat = "@drawable/ic_launcher_background"/>
 
     <TextView
         android:id="@+id/gameTitle"
