--- a/RankCheck/app/src/main/res/layout/activity_games_detail.xml
+++ b/RankCheck/app/src/main/res/layout/activity_games_detail.xml
@@ -20,7 +20,7 @@
         app:srcCompat="@drawable/ic_launcher_background" />
 
     <EditText
-        android:id="@+id/login_username"
+        android:id="@+id/link_username"
         android:layout_width="397dp"
         android:layout_height="49dp"
         android:background="@drawable/rectangle_border_black_900_radius_4"
@@ -49,13 +49,13 @@
         android:text="Game Detail to link goes here"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.154" />
+        app:layout_constraintVertical_bias="0.25" />
 
     <Button
-        android:id="@+id/RemoeBtn"
+        android:id="@+id/RemoveBtn"
         android:layout_width="159dp"
         android:layout_height="48dp"
         android:text="Remove Game"
@@ -72,27 +72,28 @@
         android:layout_height="18dp"
         android:text="Game Name"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/gameDescription"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.127" />
+        app:layout_constraintTop_toBottomOf="@+id/gameImage2"
+        app:layout_constraintVertical_bias="0.912" />
 
     <CheckBox
-        android:id="@+id/Consent"
+        android:id="@+id/consent_check"
         android:layout_width="321dp"
         android:layout_height="48dp"
-        android:text="I consent to RankCheck to acess my data"
+        android:text="I consent to RankCheck to access my data"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_username"
+        app:layout_constraintTop_toBottomOf="@+id/link_username"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/link_button"
         android:layout_width="146dp"
         android:layout_height="56dp"
         android:text="Link Game"
@@ -100,7 +101,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Consent"
+        app:layout_constraintTop_toBottomOf="@+id/consent_check"
         app:layout_constraintVertical_bias="0.379" />
 
 
