--- a/RankCheck/app/src/main/res/layout/fragment_profile.xml
+++ b/RankCheck/app/src/main/res/layout/fragment_profile.xml
@@ -1,14 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".profileFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:id="@+id/rowUser"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Profile Page" />
+        android:layout_height="150dp"
 
-</FrameLayout>
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageUser"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_launcher_background"
+            android:padding="20dp"
+            />
+        <LinearLayout
+            android:id="@+id/nameBio"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="20dp">
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Name"
+                android:layout_margin="10dp"
+                />
+            <TextView
+                android:id="@+id/userBio"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Bio"
+                android:layout_margin="10dp"
+                />
+        </LinearLayout>
+     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/rowFriends"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rowUser">
+
+        <ImageView
+            android:id="@+id/imageFriend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_launcher_background"
+            android:padding="20dp"
+            />
+
+    <!--        https://www.geeksforgeeks.org/android-horizontal-recyclerview-with-examples/-->
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/rowGames"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rowFriends">
+
+        <ImageView
+            android:id="@+id/imageGames"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_launcher_background"
+            android:padding="20dp"
+            />
+
+        <!--        https://www.geeksforgeeks.org/android-horizontal-recyclerview-with-examples/-->
+    </LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
