added files for RV, needs testing

--- a/RankCheck/app/src/main/res/layout/friends_detail.xml
+++ b/RankCheck/app/src/main/res/layout/friends_detail.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".profileFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<!--    tools:context=".DetailFriendsPage" -->
     <LinearLayout
         android:id="@+id/rowUser"
         android:layout_width="match_parent"
@@ -47,7 +46,7 @@
                 android:layout_margin="10dp"
                 />
         </LinearLayout>
-     </LinearLayout>
+    </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -73,7 +72,7 @@
             android:src="@drawable/ic_launcher_background"
             android:padding="20dp"/>
 
-    <!--        https://www.geeksforgeeks.org/android-horizontal-recyclerview-with-examples/ -->
+        <!--        https://www.geeksforgeeks.org/android-horizontal-recyclerview-with-examples/ -->
     </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
@@ -104,9 +103,6 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"/>
-
-        <!--        https://www.geeksforgeeks.org/android-horizontal-recyclerview-with-examples/-->
     </LinearLayout>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
