--- a/RankCheck/app/src/main/res/layout/fragment_profile.xml
+++ b/RankCheck/app/src/main/res/layout/fragment_profile.xml
@@ -49,40 +49,50 @@
         </LinearLayout>
      </LinearLayout>
     <TextView
+        android:paddingTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Friends"
+        android:id="@+id/FriendsText"
         app:layout_constraintTop_toBottomOf="@+id/rowUser"
-        app:layout_constraintBottom_toTopOf="@id/rowFriends"
+        app:layout_constraintBottom_toTopOf="@id/rowFriendsRV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
     <LinearLayout
-        android:id="@+id/rowFriends"
+        android:id="@+id/rowFriendsRV"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rowUser"
-        android:layout_marginTop="50dp">
+        app:layout_constraintTop_toBottomOf="@id/FriendsText"
+        app:layout_constraintBottom_toTopOf="@id/GamesText"
+        >
 
-        <ImageView
-            android:id="@+id/imageFriend"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/friendsListRV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher_background"
-            android:padding="20dp"/>
+            android:scrollbars="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"/>
 
-    <!--        https://www.geeksforgeeks.org/android-horizontal-recyclerview-with-examples/ -->
+        <!--        https://www.geeksforgeeks.org/android-horizontal-recyclerview-with-examples/-->
     </LinearLayout>
     <TextView
+        android:id="@+id/GamesText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Games"
-        app:layout_constraintTop_toBottomOf="@+id/rowFriends"
+        app:layout_constraintTop_toBottomOf="@+id/rowFriendsRV"
         app:layout_constraintBottom_toTopOf="@id/rowGamesRV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:paddingTop="10dp"
         />
     <LinearLayout
         android:id="@+id/rowGamesRV"
@@ -90,18 +100,18 @@
         android:layout_height="150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rowFriends"
-        android:layout_marginTop="50dp">
+        app:layout_constraintTop_toBottomOf="@id/GamesText"
+        >
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/friendsListRv"
+            android:id="@+id/gamesListRV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scrollbars="horizontal"
+            android:scrollbars="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/GamesText"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"/>
 
