--- a/RankCheck/app/src/main/res/layout/friends_card_cell.xml
+++ b/RankCheck/app/src/main/res/layout/friends_card_cell.xml
@@ -3,18 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <!--Card View widget-->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        app:contentPadding="10dp"
+        app:contentPadding="15dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
+        app:cardElevation="40dp"
         app:cardBackgroundColor="#E7E0D3"
-        android:layout_margin="1dp"
+        android:layout_margin="10dp"
         >
 
         <!--Text View over Card View-->
@@ -23,7 +23,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-
             app:srcCompat="@drawable/img_user" />
         <TextView
             android:id="@+id/friendName"
@@ -31,14 +30,11 @@
             android:layout_marginTop="4dp"
             android:layout_marginLeft="20dp"
             android:layout_marginBottom="4dp"
-            android:textSize="10dp"
+            android:textSize="30px"
             android:text="Friend Username"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
-
-
-
     </androidx.cardview.widget.CardView>
 </LinearLayout>
