--- a/RankCheck/app/src/main/res/layout/activity_games_detail.xml
+++ b/RankCheck/app/src/main/res/layout/activity_games_detail.xml
@@ -39,26 +39,28 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gameDescription"
+        app:layout_constraintVertical_bias="0.05"
         tools:ignore="Autofill" />
 
     <TextView
         android:id="@+id/gameDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="390dp"
+        android:layout_height="223dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="10dp"
         android:text="Game Detail to link goes here"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintTop_toBottomOf="@+id/gameTitle" />
 
     <Button
-        android:id="@+id/RemoveBtn"
+        android:id="@+id/remove_button"
         android:layout_width="159dp"
         android:layout_height="48dp"
         android:text="Remove Game"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.945"
@@ -70,15 +72,11 @@
         android:id="@+id/gameTitle"
         android:layout_width="139dp"
         android:layout_height="18dp"
+        android:layout_marginTop="8dp"
         android:text="Game Name"
         android:textAlignment="center"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/gameDescription"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gameImage2"
-        app:layout_constraintVertical_bias="0.912" />
+        app:layout_constraintTop_toBottomOf="@+id/gameImage2" />
 
     <CheckBox
         android:id="@+id/consent_check"
