--- a/RankCheck/app/src/main/res/layout/fragment_profile.xml
+++ b/RankCheck/app/src/main/res/layout/fragment_profile.xml
@@ -24,6 +24,7 @@
             android:src="@drawable/ic_launcher_background"
             android:padding="20dp"
             />
+
         <LinearLayout
             android:id="@+id/nameBio"
             android:layout_width="100dp"
@@ -43,11 +44,46 @@
                 android:id="@+id/userBio"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Bio"
+                android:text="Current Bio"
                 android:layout_margin="10dp"
+                android:visibility="visible"
+                />
+
+            <EditText
+                android:id="@+id/editBioET"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:hint="Edit Bio"
+                android:layout_margin="5dp"
+                android:visibility="gone"
+
                 />
         </LinearLayout>
-     </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="15dp">
+            <Button
+                android:id="@+id/editBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Edit Bio"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="15dp"/>
+            <Button
+                android:id="@+id/editSubmit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Submit"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="15dp"
+                android:visibility="gone"
+                />
+        </LinearLayout>
+    </LinearLayout>
     <TextView
         android:paddingTop="10dp"
         android:layout_width="wrap_content"
